[gd_scene load_steps=8 format=3 uid="uid://biacgdr7qj558"]

[ext_resource type="Theme" uid="uid://bllt7k6sjj8bi" path="res://themes/menu_theme.tres" id="1_px0qg"]
[ext_resource type="Script" path="res://ui/settings_menu.gd" id="2_07bjr"]
[ext_resource type="FontFile" uid="uid://iseqpbc8ays2" path="res://fonts/SueEllenFrancisco-Regular.ttf" id="3_knycr"]

[sub_resource type="Animation" id="Animation_1lg6h"]
resource_name = "dismiss"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_j6ym2"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jtltj"]
_data = {
"dismiss": SubResource("Animation_1lg6h"),
"show": SubResource("Animation_j6ym2")
}

[sub_resource type="LabelSettings" id="LabelSettings_cyux0"]
font = ExtResource("3_knycr")
font_size = 36
font_color = Color(0, 0, 0, 0.96)

[node name="SettingsMenu" type="PanelContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_px0qg")
script = ExtResource("2_07bjr")

[node name="UIAnimations" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_jtltj")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(640, 640)
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_cyux0")

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 1

[node name="Video" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="Margin" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Video"]
layout_mode = 2

[node name="FullscreenButton" type="CheckButton" parent="MarginContainer/VBoxContainer/TabContainer/Video/Margin"]
unique_name_in_owner = true
layout_mode = 2
text = "Fullscreen"

[node name="Audio" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="Margin" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/Margin"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/Margin/HBoxContainer"]
layout_mode = 2
text = "Master volume"

[node name="SliderHolder" type="Control" parent="MarginContainer/VBoxContainer/TabContainer/Audio/Margin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MasterSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/Margin/HBoxContainer/SliderHolder"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -8.0
offset_right = -10.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/Margin"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/Margin/HBoxContainer2"]
layout_mode = 2
text = "Music volume"

[node name="SliderHolder" type="Control" parent="MarginContainer/VBoxContainer/TabContainer/Audio/Margin/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/Margin/HBoxContainer2/SliderHolder"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -8.0
offset_right = -10.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/Margin"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/Margin/HBoxContainer3"]
layout_mode = 2
text = "Effects volume"

[node name="SliderHolder" type="Control" parent="MarginContainer/VBoxContainer/TabContainer/Audio/Margin/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EffectsSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/Margin/HBoxContainer3/SliderHolder"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -8.0
offset_right = -10.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0
